--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "unexpected-koa": "^1.0.0"
   },
   "dependencies": {
-    "koa": "^2.3.0"
+    "koa": "^2.3.0",
+    "koa-mount": "^3.0.0"
   }
 }
