--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "koa": "^2.3.0",
-    "koa-mount": "^3.0.0"
+    "koa-mount": "^3.0.0",
+    "koa-route": "^3.2.0"
   }
 }
