--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "lib/index.js",
   "scripts": {
+    "coverage": "jest --coverage",
     "test": "jest --watch"
   },
   "keywords": [],
