--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "author": "Gustav Nikolaj Olsen <gustavnikolaj@gmail.com>",
   "license": "ISC",
   "devDependencies": {
+    "eslint": "^3.19.0",
+    "eslint-config-pretty-standard": "^0.2.2",
     "jest": "^20.0.4",
     "unexpected": "^10.33.2",
     "unexpected-koa": "^1.0.0"
