--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "koe",
+  "name": "koae",
   "version": "0.0.0",
   "description": "",
   "main": "lib/index.js",
@@ -13,7 +13,7 @@
     "express"
   ],
   "author": "Gustav Nikolaj Olsen <gustavnikolaj@gmail.com>",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "eslint": "^3.19.0",
     "eslint-config-pretty-standard": "^0.2.2",
