--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint": "^3.19.0",
     "eslint-config-pretty-standard": "^0.2.2",
     "jest": "^20.0.4",
+    "koa-router": "^7.2.1",
     "unexpected": "^10.33.2",
     "unexpected-koa": "^1.0.0"
   },
