--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint-config-pretty-standard": "^0.2.2",
     "jest": "^20.0.4",
     "koa-router": "^7.2.1",
+    "prettier": "^1.5.3",
     "unexpected": "^10.33.2",
     "unexpected-koa": "^1.0.0"
   },
